@@ -4,6 +4,9 @@ Release 3.5.0 (in development)
 Dependencies
 ------------
 
+* LaTeX: ``multicol`` (it is anyhow a required part of the official latex2e
+  base distribution)
+
 Incompatible changes
 --------------------
 
@@ -103,6 +106,7 @@ Bugs fixed
   specified
 * #7576: LaTeX with French babel and memoir crash: "Illegal parameter number
   in definition of ``\FNH@prefntext``"
+* #8072: LaTeX: Directive :rst:dir:`hlist` not implemented in LaTeX
 * #8214: LaTeX: The :rst:role:`index` role and the glossary generate duplicate
   entries in the LaTeX index (if both used for same term)
 * #8735: LaTeX: wrong internal links in pdf to captioned code-blocks when
